--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 0.62em solid #fff;
 }
 
 .header {
@@ -40,7 +39,6 @@ body {
   padding: 30px 0;
 }
 
-/* #canvas {
-  border: 0.62em solid #fff;
-  padding: 2em;
-} */
+#canvas {
+  border: 0.6em solid #fff;
+}
