--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -39,6 +39,11 @@ body {
   padding: 30px 0;
 }
 
+.footer-title {
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+}
+
 #canvas {
   border: 0.6em solid #fff;
 }
