--- a/src/stylesheets/style.css
+++ b/src/stylesheets/style.css
@@ -1,21 +1,22 @@
-@import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap");
-
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 body {
   height: 100vh;
-  background-color: #000;
+  background-color: #1a1d23;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 }
 
 .board {
   position: relative;
-  top: -50px;
+  top: -100px;
   width: 600px;
 }
 
@@ -33,17 +34,79 @@ body {
 .header * {
   width: 100%;
   color: #fff;
-  font-family: "Orbitron", sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
   font-size: 50px;
   text-align: center;
   padding: 30px 0;
+  user-select: none;
+}
+
+.header .title {
+  letter-spacing: 10px;
+}
+
+footer {
+  background-color: #0f1115;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 120px;
+  border-top: 0.02em solid #555;
 }
 
 .footer-title {
   font-family: "Poppins", sans-serif;
   color: #fff;
+  font-size: 15px;
+  letter-spacing: 0.1em;
+  user-select: none;
+}
+
+.svgIcon {
+  position: relative;
+  top: 7px;
+  width: 30px;
+}
+
+a {
+  background-color: #fff5;
+  border-radius: 0.1em;
+  padding: 2px;
+  color: #fff;
+  text-decoration: none;
+  transition: all 0.2s;
+}
+
+a:hover {
+  background: #ddd;
+  color: #000;
 }
 
 #canvas {
   border: 0.6em solid #fff;
+  /* box-shadow: 0 0 35px 3px #89d9f4; */
+  animation-name: aura;
+  animation-duration: 10s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@keyframes aura {
+  0% {
+    box-shadow: 0 0 1000px 20px #ff00eea0;
+  }
+  33% {
+    box-shadow: 0 0 1000px 20px #00bfffa0;
+  }
+  66% {
+    box-shadow: 0 0 1000px 20px #eeff00a0;
+  }
+  100% {
+    box-shadow: 0 0 1000px 20px #ff00eea0;
+  }
 }
